# patina

./: .gitlab-ci.yml
.github/workflows/: ci.yml
service/: .env  Cargo.toml  Dockerfile  docker-compose.yml  rustfmt.toml
service/crates/testdatabase/: Cargo.toml
service/crates/testdatabase/src/: database.rs
service/crates/testdatabase/src/seed/: user.rs
service/docker/: start.sh
service/migrations/: 20210117-000001-createUsers.sql
service/src/: authentication.rs  authorization.rs  database.rs  health.rs  home.rs  http.rs  lib.rs  main.rs  model.rs  server.rs  service.rs  users.rs
service/src/authentication/: config.rs  endpoints.rs  model.rs  providers.rs  service.rs  usecases.rs
service/src/authentication/endpoints/: complete.rs  list_providers.rs  model.rs  start.rs
service/src/authentication/providers/: google.rs
service/src/authentication/providers/google/: claims.rs  config.rs
service/src/authentication/service/: complete.rs  list.rs  start.rs
service/src/authentication/usecases/: complete.rs  list_providers.rs  start.rs
service/src/authorization/: config.rs  model.rs  service.rs  usecases.rs
service/src/authorization/service/: access_token.rs  security_context.rs  security_context_service.rs
service/src/authorization/service/access_token/: generate.rs  validate.rs
service/src/authorization/service/security_context/: generate.rs
service/src/authorization/service/security_context_service/: generate.rs
service/src/database/: config.rs  health.rs  migrate.rs  postgres.rs  test.rs
service/src/health/: config.rs  endpoints.rs  model.rs  service.rs  usecases.rs
service/src/health/endpoints/: check_health.rs  model.rs
service/src/health/service/: check_health.rs
service/src/home/: config.rs  endpoints.rs  model.rs
service/src/home/endpoints/: home.rs
service/src/http/: hal.rs  response.rs
service/src/http/problem/: model.rs  response.rs  types.rs
service/src/server/: config.rs  span.rs
service/src/service/: testing.rs
service/src/users/: config.rs  endpoints.rs  model.rs  repository.rs  service.rs  usecases.rs
service/src/users/endpoints/: get_user.rs  model.rs
service/src/users/model/: authentication_id.rs  authentication_service.rs  email.rs  user_id.rs
service/src/users/repository/: get.rs  model.rs
service/src/users/service/: create_user.rs  get_user.rs
service/tests/: service.rs
service/tests/tests/: authentication.rs  health.rs  home.rs  mod.rs  users.rs
service/tests/tests/authentication/: list.rs  start.rs
service/tests/tests/users/: get_user_by_id.rs
