[package]
name = "patina"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
actix-rt = "1.1.1"
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.15"
dotenv = "0.15.0"
config = "0.10.1"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = { version = "1.0.61", features = ["preserve_order"] }

[dev-dependencies]

[package.metadata.commands]
clippy = "find . -name *.rs | xargs touch; cargo clippy"
