[package]
name = "patina"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
actix-rt = "1.1.1"
tracing = "0.1.22"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.15"
dotenv = "0.15.0"
config = "0.10.1"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = { version = "1.0.61", features = ["preserve_order"] }
actix-cors = "0.5.4"
actix-http = "2.2.0"
actix-web = "3.3.2"
futures = "0.3.10"
async-trait = "0.1.42"

deadpool = "0.5.2"
deadpool-postgres = "0.5.6"
postgres-types = { version = "0.1.3", features = ["derive", "with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres = { version = "0.5.5", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }

[dev-dependencies]
assert2 = "0.3.3"
insta = "1.5.2"

patina-testdatabase = { path = './crates/testdatabase'}

[package.metadata.commands]
clippy = "find . -name *.rs | grep -v target | xargs touch; cargo clippy"
