[package]
name = "patina-testdatabase"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = { version = "1.0.61", features = ["preserve_order"] }
testcontainers = "0.11.0"
tracing = "0.1.22"
uuid = {version = "0.8.1", features = ["v4", "serde"] }

deadpool = "0.5.2"
deadpool-postgres = "0.5.6"
postgres-types = { version = "0.1.3", features = ["derive", "with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres = { version = "0.5.5", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
